; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/extr_usb_transfer.c_usbd_transfer_timeout_ms.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/extr_usb_transfer.c_usbd_transfer_timeout_ms.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_xfer = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@MA_OWNED = common dso_local global i32 0, align 4
@USB_CALLOUT_ZERO_TICKS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usbd_transfer_timeout_ms(%struct.usb_xfer* %0, void (i8*)* %1, i32 %2) #0 {
  %4 = alloca %struct.usb_xfer*, align 8
  %5 = alloca void (i8*)*, align 8
  %6 = alloca i32, align 4
  store %struct.usb_xfer* %0, %struct.usb_xfer** %4, align 8
  store void (i8*)* %1, void (i8*)** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.usb_xfer*, %struct.usb_xfer** %4, align 8
  %8 = getelementptr inbounds %struct.usb_xfer, %struct.usb_xfer* %7, i32 0, i32 1
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @MA_OWNED, align 4
  %13 = call i32 @USB_BUS_LOCK_ASSERT(i32 %11, i32 %12)
  %14 = load %struct.usb_xfer*, %struct.usb_xfer** %4, align 8
  %15 = getelementptr inbounds %struct.usb_xfer, %struct.usb_xfer* %14, i32 0, i32 0
  %16 = load i32, i32* %6, align 4
  %17 = call i64 @USB_MS_TO_TICKS(i32 %16)
  %18 = load i64, i64* @USB_CALLOUT_ZERO_TICKS, align 8
  %19 = add nsw i64 %17, %18
  %20 = load void (i8*)*, void (i8*)** %5, align 8
  %21 = load %struct.usb_xfer*, %struct.usb_xfer** %4, align 8
  %22 = call i32 @usb_callout_reset(i32* %15, i64 %19, void (i8*)* %20, %struct.usb_xfer* %21)
  ret void
}

declare dso_local i32 @USB_BUS_LOCK_ASSERT(i32, i32) #1

declare dso_local i32 @usb_callout_reset(i32*, i64, void (i8*)*, %struct.usb_xfer*) #1

declare dso_local i64 @USB_MS_TO_TICKS(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
